<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/pbusiness"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="Primary Business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:onClick="updateContact"
        android:text="Update Data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="68dp"
        android:layout_marginTop="12dp"
        android:onClick="eraseContact"
        android:text="Erase Contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

    <EditText
        android:id="@+id/addr"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbusiness" />

    <EditText
        android:id="@+id/province"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="Province/Territory"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addr" />


</android.support.constraint.ConstraintLayout>
